# dbt-cll-evaluator

./: .gitignore  LICENSE.md  README.md  demo.cast  pyproject.toml
dbt_cll_evaluator/: __main__.py  rules.py
dbt_cll_evaluator/cll_types/: __init__.py
dbt_cll_evaluator/dbt_operations/: __init__.py
